Changed jumping logic Scale animation on first chat opening Draft: save entities on saving Fix blinking media on chat opening Changed peer name colors to macOS version

--- a/src/scss/partials/_badge.scss
+++ b/src/scss/partials/_badge.scss
@@ -14,10 +14,6 @@
     min-width: 1.25rem;
     line-height: 1.25rem !important;
     padding: 0 5.75px;
-
-    html.is-safari & {
-      line-height: 22px !important;
-    }
   }
 
   &-24 {
